k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-template-next-react
  annotations:
    external-dns.alpha.kubernetes.io/hostname: project-template-next-react.xinobi.net
spec:
  rules:
    - host: project-template-next-react.xinobi.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
