k8s/overlays/prod/virtualservice-patch.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ceo-era
spec:
  hosts:
    - ceo-era.xinobi.net
